# wagtail-jotform

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: release.yml  test.yml
docs/: CONTRIBUTING.md  RELEASE.md
wagtail_jotform/: __init__.py  models.py  settings.py  utils.py  wagtail_hooks.py
wagtail_jotform/migrations/: 0001_initial.py  0002_rename_embedded_form_model.py
wagtail_jotform/templates/wagtail_jotform/: embeded_form_page.html  thank_you.html
wagtail_jotform/tests/: settings.py  tests.py  urls.py
wagtail_jotform/tests/testapp/fixtures/: test.json
