[tool.poetry]
name = "wagtail-jotform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wagtail = "^4.1"
coverage = "^6.4.1"
django = [
    {version = "^3.2", python = "<3.8"},
    {version = "^4.0", python = ">=3.8"},
]

[tool.poetry.group.dev.dependencies]
pre-commit = [
    {version = "^2.21.0", python = "<3.8"},
    {version = "^3.0.4", python = ">=3.8"},
]
isort = [
    {version = "^5.3.0", python = "<3.8"},
    {version = "^5.12.0", python = ">=3.8"},
]
black = "^23.1.0"
flake8 = [
    {version = "^5.0.4", python = "<3.8.1"},
    {version = "^6.0.0", python = ">=3.8.1"},
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
